Add public interface functions, CT tests, fix formatting

--- a/rebar.config
+++ b/rebar.config
@@ -14,6 +14,13 @@
   {cloudi_core, ".*", {git, "https://github.com/CloudI/cloudi_core.git", {tag, "v1.3.2"}}}
  ]}.
 
+{xref_checks,
+[exports_not_used,
+    undefined_function_calls]}.
+{xref_warnings, true}.
+{cover_enabled, true}.
+{cover_print_enabled, true}.
+{cover_export_enabled, true}.
 {cover_enabled, true}.
 
 {clean_files, ["erl_crash.dump", "test/*.beam", "include/*_pb.hrl"]}.
