--- a/rebar.config
+++ b/rebar.config
@@ -1,26 +1,27 @@
 %%% -*- mode: erlang -*-
 {erl_opts,
-  [
-    debug_info,
-    %% bin_opt_info,
-    warn_unused_vars,
-    warn_shadow_vars,
-    warn_unused_import,
-    warnings_as_errors
-  ]}.
+ [debug_info,
+  %% bin_opt_info,
+  warn_unused_vars,
+  warn_shadow_vars,
+  warn_unused_import,
+  warnings_as_errors]}.
 
-{deps, [
-  {erlcql, ".*", {git, "https://github.com/rpt/erlcql.git", {branch, "master"}}},
-  {cloudi_core, ".*", {git, "https://github.com/CloudI/cloudi_core.git", {tag, "v1.3.2"}}}
- ]}.
+{deps,
+ [{erlcql, ".*",
+   {git, "https://github.com/rpt/erlcql.git",
+    {tag, "0.1.6"}}},
+  {cloudi_core, ".*",
+   {git, "https://github.com/CloudI/cloudi_core.git",
+    {tag, "v1.3.2"}}}]}.
 
 {xref_checks,
-[exports_not_used,
-    undefined_function_calls]}.
+ [exports_not_used,
+  undefined_function_calls]}.
 {xref_warnings, true}.
 {cover_enabled, true}.
 {cover_print_enabled, true}.
 {cover_export_enabled, true}.
-{cover_enabled, true}.
 
-{clean_files, ["erl_crash.dump", "test/*.beam", "include/*_pb.hrl"]}.
+{clean_files,
+ ["erl_crash.dump", "test/*.beam", "include/*_pb.hrl"]}.
