Fix dialyzer errors, clean-up return types and change public API function names to erlang-style names.

--- a/rebar.config
+++ b/rebar.config
@@ -10,7 +10,7 @@
   ]}.
 
 {deps, [
-  {erlcql, ".*", {git, "https://github.com/rpt/erlcql.git", {branch, "master"}}},
+  {erlcql, ".*", {git, "https://github.com/rpt/erlcql.git", {branch, "develop"}}},
   {cloudi_core, ".*", {git, "https://github.com/CloudI/cloudi_core.git", {tag, "v1.3.2"}}}
  ]}.
 
