Update hex package.

--- a/rebar.config
+++ b/rebar.config
@@ -13,7 +13,7 @@
     {branch, "develop"}}},
   {cloudi_core, ".*",
    {git, "https://github.com/CloudI/cloudi_core.git",
-    {tag, "v1.3.3.2"}}}]}.
+    {tag, "v1.4.0-rc.4"}}}]}.
 
 {xref_checks,
  [exports_not_used,
