Fix vim modified flag at opening file.

--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,6 @@
-%%% -*- mode: erlang -*-
+%-*-Mode:erlang;coding:utf-8;tab-width:4;c-basic-offset:4;indent-tabs-mode:()-*-
+% ex: set ft=erlang fenc=utf-8 sts=4 ts=4 sw=4 et nomod:
+
 {erl_opts,
  [debug_info,
   %% bin_opt_info,
