--- a/rebar.config
+++ b/rebar.config
@@ -15,7 +15,7 @@
     {branch, "develop"}}},
   {cloudi_core, ".*",
    {git, "https://github.com/CloudI/cloudi_core.git",
-    {tag, "v1.5.1"}}}]}.
+    {branch, "master"}}}]}.
 
 {xref_checks,
  [exports_not_used,
